--- a/Maw and Paw ATL/Base.lproj/LaunchScreen.storyboard
+++ b/Maw and Paw ATL/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,13 +17,43 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DogKidLogo2" translatesAutoresizingMaskIntoConstraints="NO" id="Iat-gH-MA3">
+                                <rect key="frame" x="8" y="252" width="359" height="296"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="359" id="4tv-Te-cVQ"/>
+                                    <constraint firstAttribute="height" constant="296" id="vrQ-gx-PTG"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mySpotLogo" translatesAutoresizingMaskIntoConstraints="NO" id="qME-kE-pWM">
+                                <rect key="frame" x="8" y="103" width="359" height="74"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="74" id="76X-po-FH8"/>
+                                    <constraint firstAttribute="width" constant="359" id="Wfs-Jj-fGT"/>
+                                    <constraint firstAttribute="height" constant="74" id="fED-Va-I5J"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="359" id="ioV-IP-bgY"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="Iat-gH-MA3" firstAttribute="top" secondItem="qME-kE-pWM" secondAttribute="bottom" constant="75" id="4d2-ca-QQV"/>
+                            <constraint firstItem="Iat-gH-MA3" firstAttribute="leading" secondItem="qME-kE-pWM" secondAttribute="leading" id="7Pq-pJ-M3N"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qME-kE-pWM" secondAttribute="trailing" constant="8" id="KpP-MZ-ZRu"/>
+                            <constraint firstItem="qME-kE-pWM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="83" id="PGH-Gj-vHk"/>
+                            <constraint firstItem="qME-kE-pWM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="VdA-xP-0Me"/>
+                            <constraint firstItem="Iat-gH-MA3" firstAttribute="top" secondItem="qME-kE-pWM" secondAttribute="bottom" constant="75" id="qM8-PY-M0w"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="DogKidLogo2" width="727" height="692"/>
+        <image name="mySpotLogo" width="600" height="110"/>
+    </resources>
 </document>
