--- a/Maw and Paw ATL/Base.lproj/Main.storyboard
+++ b/Maw and Paw ATL/Base.lproj/Main.storyboard
@@ -342,7 +342,7 @@
                                 <rect key="frame" x="20" y="44" width="374" height="47"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="AvenirNextCondensed-Regular" family="Avenir Next Condensed" pointSize="30"/>
-                                <color key="textColor" red="0.12941176469999999" green="0.57647058819999997" blue="0.1529411765" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.89833527800000001" green="0.77626687289999996" blue="0.26336544750000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="sFp-rZ-3Qd">
